--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="works.html">Works</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="blogs.html">Blogs</a>
               </li>
             </ul>
