--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="resume.html">Resume</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="works.html">Works</a>
               </li>
               <li class="nav-item">
