added learning and completed resume

--- a/blogs.html
+++ b/blogs.html
@@ -5,14 +5,13 @@
     <title>Sideok You</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap&subset=korean" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" />
     <link rel="stylesheet" href="css/index.css" type="text/css" />
   </head>
   <body>
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg navbar-light mt-5 mb-2">
-          <a class="navbar-brand" href="#" style="font-weight:bold;">Sideok You</a>
+          <a class="navbar-brand" href="index.html" style="font-weight:bold;">Sideok You</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,25 +21,34 @@
                 <a class="nav-link" href="resume.html">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="works.html">Works</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="blogs.html">Blogs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="learnings.html">Learnings</a>
               </li>
             </ul>
           </div>
         </nav>
       </header>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
-        <div class="col-md-12 px-0">
-          <h1 class="display-4 font-italic">FullStack Web Developer</h1>
+      <div class="row">
+        <div class="col-12">
+          <div class="blog-post">
+            <h2 class="blog-post-title">시작</h2>
+            <p class="blog-post-meta">Nov 7, 2019 by <a href="#">Sideok You</a></p>
+            <p>
+              이전부터 강력한 생각이나 마음이 들 때마다 이따금씩 기록을 해두곤 했는데, 갈수록 바빠지는 핑계 아닌 핑계인 삶을 살다보니, 계속 놓치는 것이 많아지지 않았나 하는 생각이 들었다. 사실, 이 웹사이트를 만드는 것도 결국에는 내가 어떤 길을 걸어 왔고, 어떤 발자취를 남겼는지를 보고 반성하며 발전된 미래를 살아내기 위해서 이다.
+            </p>
+            <p>
+              앞으로 어떠한 이야기와 배움의 내용들이 올라올지는 모르겠으나, 꾸준히 잘 관리하며 나의 삶의 아름다운 여정이 잘 기록되기를 바란다.
+            </p>
+          </div>
         </div>
       </div>
-
-      <p class="lead my-3 p-5">Creative and dependable software developer with a stellar customer service record and superb work ethic.<br><br>Broadly and deeply knowledgeable in a wide variety of computer languages as well as the principles and techniques of website construction and maintenance.<br><br>Extensive experience with web frameworks and building mobile applications</p>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
