--- a/resume.html
+++ b/resume.html
@@ -5,14 +5,13 @@
     <title>Sideok You</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap&subset=korean" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" />
     <link rel="stylesheet" href="css/index.css" type="text/css" />
   </head>
   <body>
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg navbar-light mt-5 mb-2">
-          <a class="navbar-brand" href="#" style="font-weight:bold;">Sideok You</a>
+          <a class="navbar-brand" href="index.html" style="font-weight:bold;">Sideok You</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,10 +21,13 @@
                 <a class="nav-link" href="resume.html">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="works.html">Works</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blogs.html">Blogs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="learnings.html">Learnings</a>
               </li>
             </ul>
           </div>
@@ -36,38 +38,37 @@
       <div class="row">
         <div class="col-12">
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 fs-15">Xen Media, Inc - Current</strong>
-              <h3 class="mb-2 fs-b">FullStack Web Developer</h3>
-              <h3 class="mb-1">Los Angeles, CA</h3>
+              <strong class="d-inline-block mb-2">Xen Media, Inc</strong>
+              <h4 class="mb-2 fs-b">FullStack Web Developer</h4>
+              <h6 class="mb-1">Los Angeles, CA</h6>
               <div class="mb-1 text-muted">Jan 2017 - Current</div>
               <ul class="mt-2">
-                <li>- Lead a team which consists of web developers, web designers, and marketers</li>
+                <li>Lead a team which consists of web developers, web designers, and marketers</li>
                 <li>
-                  -	A full-Stack developer for developing backend and frontend.
+                  A full-Stack developer for developing backend and frontend.
                 </li>
                 <li>
-                  - Work on digital marketing with analytic tools
+                  Work on digital marketing with analytic tools
                 </li>
                 <li>
-                  - A communicator with new and existing clients
+                  A communicator with new and existing clients
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Stacks</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Stacks</h4>
+              <ul class="">
                 <li>
-                  Front-end
-                  <ul class='ml-3 mb-2'>
+                  Frontend
+                  <ul class='mb-2'>
                     <li>
                       HTML, CSS, Vanilla JavaScript, jQuery, React, React Native, and Vue
                     </li>
                   </ul>
                 </li>
                 <li>
-                  Back-end
-                  <ul class='ml-3 mb-2'>
+                  Backend
+                  <ul class='mb-2'>
                     <li>
                       PHP, MySQL, Firebase, MongoDB, and Laravel
                     </li>
@@ -75,57 +76,65 @@
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Works</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Works</h4>
+              <ul class="">
                 <li>
-                  <a href="https://ajasianfoods.com">Ajinomoto</a> - Foods
+                  <a href="https://ajasianfoods.com">Ajinomoto</a> Foods
                 </li>
                 <li>
-                  <a href="https://zionmarket.com">Zion Market</a> - Foods
+                  <a href="https://zionmarket.com">Zion Market</a> Foods
                 </li>
                 <li>
-                  <a href="https://zion-marketplace.com">Zion Marketplace</a> - Community
+                  <a href="https://zion-marketplace.com">Zion Marketplace</a> Community
                 </li>
                 <li>
-                  <a href="https://kpopticket.us">Kpopticket.us</a> - Concert Ticket Selling Platform
+                  <a href="https://kpopticket.us">Kpopticket.us</a> Concert Ticket Selling Platform
                 </li>
                 <li>
-                  <a href="https://xenmedia.net">Xen Media, Inc</a> - Marketing Agency
+                  <a href="https://xenmedia.net">Xen Media, Inc</a> Marketing Agency
                 </li>
                 <li>
-                  <a href="https://bloommeds.com/">Bloom Medical Aesthetics</a> - Beauty
+                  <a href="https://bloommeds.com/">Bloom Medical Aesthetics</a> Beauty
                 </li>
                 <li>
-                  <a href="https://guin1884.com/">GUIN 1884</a> - Herb Supplement eCommerce
+                  <a href="https://guin1884.com/">GUIN 1884</a> Herb Supplement eCommerce
                 </li>
                 <li>
-                  <a href="https://jsjentertainment.com/">JSJ Entertainment</a> - Music Industry
+                  <a href="https://jsjentertainment.com/">JSJ Entertainment</a> Music Industry
                 </li>
                 <li>
-                  <a href="https://blueairfse.com/">Blue Air FSE</a> - Commercial Refrigeration
+                  <a href="https://blueairfse.com/">Blue Air FSE</a> Commercial Refrigeration
                 </li>
                 <li>
-                  <a href="https://fomomed.com/">FOMO MED</a> - Medical Appointment Service
+                  <a href="https://fomomed.com/">FOMO MED</a> Medical Appointment Service
                 </li>
                 <li>
-                  <a href="https://chunha.com/">Chunha Insurance</a> - Insurance
+                  <a href="https://chunha.com/">Chunha Insurance</a> Insurance
                 </li>
                 <li>
-                  <a href="https://omonausa.com/">Omona USA</a> - Food eCommerce
+                  <a href="https://omonausa.com/">Omona USA</a> Food eCommerce
                 </li>
                 <li>
-                  <a href="http://medi2korea.com">Medi2Korea</a> - Medical Service
+                  <a href="http://medi2korea.com">Medi2Korea</a> Medical Service
                 </li>
                 <li>
-                  <a href="https://leeohlaw.com/">Lee & Oh</a> - Law Firm
+                  <a href="https://leeohlaw.com/">Lee & Oh</a> Law Firm
                 </li>
                 <li>
-                  <a href="https://bisearch.com/">Bi-Search International, Inc</a> - Display Solution Service
+                  <a href="https://bisearch.com/">Bi-Search International, Inc</a> Display Solution Service
+                </li>
+                <li class="mt-4">
+                  Apps
+                  <ul>
+                    <li>
+                      Zion Market Application Coupon & Royalty | <a href="https://apps.apple.com/us/app/zion-market-rewards/id1454715176">iOS</a>,<a href="https://play.google.com/store/apps/details?id=com.ionicframework.zionmarketv01&hl=en_US">Android</a>
+                    </li>
+                    <li>
+                      Radio Seoul Application Realtime Radio | <a href="https://apps.apple.com/us/app/%EB%9D%BC%EB%94%94%EC%98%A4%EC%84%9C%EC%9A%B8/id1281859389">iOS</a>,<a href="https://play.google.com/store/apps/details?id=com.radioseoul&hl=en_US">Android</a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://via.placeholder.com/200x250" />
             </div>
           </div>
         </div>
@@ -134,31 +143,31 @@
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 fs-15">Age of Learning</strong>
-              <h3 class="mb-2 fs-b">FullStack Web Developer</h3>
-              <h3 class="mb-1">Glendale, CA</h3>
+              <strong class="d-inline-block mb-2">Age of Learning</strong>
+              <h4 class="mb-2 fs-b">FullStack Web Developer</h4>
+              <h5 class="mb-1">Glendale, CA</h5>
               <div class="mb-1 text-muted">Jan 2016 - Aug 2016</div>
               <ul class="mt-2">
-                <li>-	Extensive work with Java, front-end and back-end.</li>
+                <li>Extensive work with Java, frontend and backend</li>
                 <li>
-                  -	Increased efficiency by improving workflow using Git, Jira and Confluence.
+                  Increased efficiency by improving workflow using Git, Jira and Confluence
                 </li>
                 <li>
-                  - Conceptualized art direction and user experience.
+                  Conceptualized art direction and user experience
                 </li>
                 <li>
-                  - Expanded product development for Korean reach.
+                  Expanded product development for Korean reach
                 </li>
                 <li>
-                  - Operated data warehouse to collect data from customers for various marketing strategies.
+                  Operated data warehouse to collect data from customers for various marketing strategies
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Stacks</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Stacks</h4>
+              <ul class="">
                 <li>
                   Front-end
-                  <ul class='ml-3 mb-2'>
+                  <ul class='mb-2'>
                     <li>
                       HTML, CSS, Vanilla JavaScript, and jQuery
                     </li>
@@ -166,7 +175,7 @@
                 </li>
                 <li>
                   Back-end
-                  <ul class='ml-3 mb-2'>
+                  <ul class='mb-2'>
                     <li>
                       PHP, MySQL, and Java
                     </li>
@@ -174,15 +183,12 @@
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Works</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Works</h4>
+              <ul class="">
                 <li>
-                  <a href="https://abcmouse.com">ABCmouse.com</a> - Education Service
+                  <a href="https://abcmouse.com">ABCmouse.com</a> Education Service
                 </li>
               </ul>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://via.placeholder.com/200x250" />
             </div>
           </div>
         </div>
@@ -191,28 +197,28 @@
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 fs-15">University of Southern California</strong>
-              <h3 class="mb-2 fs-b">Web Development TA</h3>
-              <h3 class="mb-1">Los Angeles, CA</h3>
+              <strong class="d-inline-block mb-2">University of Southern California</strong>
+              <h4 class="mb-2 fs-b">Web Development TA</h4>
+              <h5 class="mb-1">Los Angeles, CA</h5>
               <div class="mb-1 text-muted">Jan 2015 - Dec 2016</div>
               <ul class="mt-2">
-                <li>- Patiently taught students a wide variety of programming concepts.</li>
+                <li>Patiently taught students a wide variety of programming concepts.</li>
                 <li>
-                  -	Responsible for checking and grading student work.
+                  Responsible for checking and grading student work.
                 </li>
                 <li>
-                  - Kept accurate records of individual student performance.
+                  Kept accurate records of individual student performance.
                 </li>
                 <li>
-                  - Provided constructive feedback and motivation.
+                  Provided constructive feedback and motivation.
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Stacks</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Stacks</h4>
+              <ul class="">
                 <li>
                   Front-end
-                  <ul class='ml-3 mb-2'>
+                  <ul class='mb-2'>
                     <li>
                       HTML, CSS, Vanilla JavaScript, and jQuery
                     </li>
@@ -220,7 +226,7 @@
                 </li>
                 <li>
                   Back-end
-                  <ul class='ml-3 mb-2'>
+                  <ul class='mb-2'>
                     <li>
                       PHP and MySQL
                     </li>
@@ -228,15 +234,12 @@
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Works</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Works</h4>
+              <ul class="">
                 <li>
-                  <a href="https://itp.usc.edu/">USC Information Technology Program</a> - Web Development
+                  <a href="https://itp.usc.edu/">USC Information Technology Program</a> Web Development
                 </li>
               </ul>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://via.placeholder.com/200x250" />
             </div>
           </div>
         </div>
@@ -245,46 +248,77 @@
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 fs-15">AhnLab</strong>
-              <h3 class="mb-2 fs-b">Software Engineer</h3>
-              <h3 class="mb-1">PanGyo, South Korea</h3>
+              <strong class="d-inline-block mb-2">AhnLab</strong>
+              <h4 class="mb-2 fs-b">Software Engineer</h4>
+              <h5 class="mb-1">PanGyo, South Korea</h5>
               <div class="mb-1 text-muted">Aug 2012 - Feb 2013</div>
               <ul class="mt-2">
-                <li>- Developed and ported a top Korean Anti-Virus, V3, to Android platform.</li>
+                <li>Developed and ported a top Korean Anti-Virus, V3, to Android platform</li>
                 <li>
-                  -	Managed all projects with Cyber Security and safety as a priority.
+                  Managed all projects with Cyber Security and safety as a priority
                 </li>
                 <li>
-                  - Frequent testing to meet the highest quality control.
+                  Frequent testing to meet the highest quality control
                 </li>
                 <li>
-                  - Tight integration with software and hardware including battery life
+                  Tight integration with software and hardware including battery life
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Stacks</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Stacks</h4>
+              <ul class="">
                 <li>
                   Java, Android Development, and Quality Assurance
                 </li>
               </ul>
               <hr />
-              <h3 class="fs-b mb-2">Works</h3>
-              <ul class="ml-3">
+              <h4 class="fs-b mb-2">Works</h4>
+              <ul class="">
                 <li>
-                  <a href="https://global.ahnlab.com/site/main.do">AhnLab</a> - Computer Security
+                  <a href="https://global.ahnlab.com/site/main.do">AhnLab</a> Computer Security
                 </li>
                 <li>
-                  <a href="https://developer.android.com/studio/test">Code Coverage</a> - Test
+                  <a href="https://developer.android.com/studio/test">Code Coverage</a> Test
                 </li>
               </ul>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img src="https://via.placeholder.com/200x250" />
             </div>
           </div>
         </div>
 
+      </div>
+
+      <h5 class="display-4 mt-2 mb-2">Educations</h5>
+      <div class="row">
+        <div class="col-12">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 fs-15 fs-b">University of Southern California</strong>
+              <h5 class="mb-2">M.S. Computer Science, Jan 2015 Dec 2016</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-15 fs-b">Handong University</strong>
+              <h5 class="mb-2">B.S. Computer Science and Engineering, Mar 2007 Jun 2013</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-15 fs-b">Texas A&M University</strong>
+              <h5 class="mb-2">Computer Science, Exchange Student, Jan 2011 Jun 2011</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h5 class="display-4 mt-2 mb-2">Skills</h5>
+      <div class="row">
+        <div class="col-12">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 fs-b">Frontend</strong>
+              <h5 class="mb-2">HTML, CSS, SCSS, JavaScript, jQuery, React, React Native and Gulp</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-b">Backend</strong>
+              <h5 class="mb-2">PHP, MySQL, Node.js, MongoDB, and Firebase</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-b">Tools</strong>
+              <h5 class="mb-2">Git, GitHub, and JIRA</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-b">Languages</strong>
+              <h5 class="mb-2">C, Java, Python, PHP, and JavaScript</h5>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
