--- a/learnings.html
+++ b/learnings.html
@@ -26,7 +26,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="blogs.html">Blogs</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="learnings.html">Learnings</a>
               </li>
             </ul>
@@ -34,19 +34,27 @@
         </nav>
       </header>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
-        <div class="col-md-12 px-0">
-          <h1 class="display-4 font-italic">FullStack Web Developer</h1>
+      <div class="row">
+        <div class="col-3">
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action active">
+              Algorithm
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">Data Structure</a>
+            <a href="#" class="list-group-item list-group-item-action">Coding</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Frontend</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Backend</a>
+          </div>
+        </div>
+        <div class="col-9">
+          <div class="blog-post">
+            <h2 class="blog-post-title">Algorithm</h2>
+            <p class="blog-post-meta">Nov 7, 2019 by <a href="#">Sideok You</a></p>
+            <p>Sed sociis saepe dignissimos arcu habitasse, adipisicing fugiat nibh enim quas, voluptates, sagittis sociis primis tortor? Animi, quisque cupidatat repellendus iste gravida voluptates, posuere ullamcorper luctus iaculis bibendum, ratione, ac, vel quasi, facilisi. Primis! Ante, ante orci provident aenean justo. Sint consectetur. Reiciendis voluptatibus. Odio consequat dignissim bibendum, dignissimos? Minus, possimus? Curabitur bibendum nibh. Sollicitudin perferendis sagittis, ipsam wisi hymenaeos! Aliqua quibusdam donec? Voluptates aptent quibusdam! Quis bibendum! Elementum. Eaque blandit officiis lacinia, numquam laborum? Minim, faucibus delectus! Convallis iusto, labore? Parturient do, laboris. Aperiam, nonummy sapien dolorem? Habitant vestibulum, consectetuer officiis luctus massa maiores nemo condimentum euismod? Labore, doloribus.</p>
+          </div>
         </div>
       </div>
 
-      <p class="lead my-3 pt-1 pl-5 pr-5 pb-1">Creative and dependable software developer with a stellar customer service record and superb work ethic.</p>
-      <p class="lead my-3 pt-1 pl-5 pr-5 pb-1">
-        Broadly and deeply knowledgeable in a wide variety of computer languages as well as the principles and techniques of website construction and maintenance.
-      </p>
-      <p class="lead my-3 pt-1 pl-5 pr-5 pb-1">
-        Extensive experience with web frameworks and building mobile applications
-      </p>
     </div>
 
 
