--- a/learning_web/backend.html
+++ b/learning_web/backend.html
@@ -5,7 +5,7 @@
     <title>Sideok You</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap&subset=korean" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link rel="stylesheet" href="../css/index.css" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -37,13 +37,13 @@
       <div class="row">
         <div class="col-3">
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active">
+            <a href="#" class="list-group-item list-group-item-action">
               Algorithm
             </a>
             <a href="#" class="list-group-item list-group-item-action">Data Structure</a>
             <a href="#" class="list-group-item list-group-item-action">Coding</a>
-            <a href="learning_web/frontend.html" class="list-group-item list-group-item-action">Web - Frontend</a>
-            <a href="learning_web/backend.html" class="list-group-item list-group-item-action">Web - Backend</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Frontend</a>
+            <a href="#" class="list-group-item list-group-item-action active">Web - Backend</a>
           </div>
         </div>
         <div class="col-9">
