--- a/learning_web/frontend.html
+++ b/learning_web/frontend.html
@@ -5,7 +5,7 @@
     <title>Sideok You</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap&subset=korean" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link rel="stylesheet" href="../css/index.css" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -37,20 +37,20 @@
       <div class="row">
         <div class="col-3">
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active">
+            <a href="#" class="list-group-item list-group-item-action">
               Algorithm
             </a>
             <a href="#" class="list-group-item list-group-item-action">Data Structure</a>
             <a href="#" class="list-group-item list-group-item-action">Coding</a>
-            <a href="learning_web/frontend.html" class="list-group-item list-group-item-action">Web - Frontend</a>
-            <a href="learning_web/backend.html" class="list-group-item list-group-item-action">Web - Backend</a>
+            <a href="#" class="list-group-item list-group-item-action active">Web - Frontend</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Backend</a>
           </div>
         </div>
         <div class="col-9">
           <div class="blog-post">
-            <h2 class="blog-post-title">Algorithm</h2>
+            <h2 class="blog-post-title">VUE</h2>
             <p class="blog-post-meta">Nov 7, 2019 by <a href="#">Sideok You</a></p>
-            <p>Sed sociis saepe dignissimos arcu habitasse, adipisicing fugiat nibh enim quas, voluptates, sagittis sociis primis tortor? Animi, quisque cupidatat repellendus iste gravida voluptates, posuere ullamcorper luctus iaculis bibendum, ratione, ac, vel quasi, facilisi. Primis! Ante, ante orci provident aenean justo. Sint consectetur. Reiciendis voluptatibus. Odio consequat dignissim bibendum, dignissimos? Minus, possimus? Curabitur bibendum nibh. Sollicitudin perferendis sagittis, ipsam wisi hymenaeos! Aliqua quibusdam donec? Voluptates aptent quibusdam! Quis bibendum! Elementum. Eaque blandit officiis lacinia, numquam laborum? Minim, faucibus delectus! Convallis iusto, labore? Parturient do, laboris. Aperiam, nonummy sapien dolorem? Habitant vestibulum, consectetuer officiis luctus massa maiores nemo condimentum euismod? Labore, doloribus.</p>
+            <p>´</p>
           </div>
         </div>
       </div>
