--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
         </nav>
       </header>
 
-      <h5 class="display-4 mt-2 mb-2">Experiences</h5>
+      <h2 class="mt-2 mb-2"><strong>Experiences</strong></h2>
       <div class="row">
         <div class="col-12">
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -287,7 +287,7 @@
 
       </div>
 
-      <h5 class="display-4 mt-2 mb-2">Educations</h5>
+      <h2 class="mt-2 mb-2"><strong>Educations</strong></h2>
       <div class="row">
         <div class="col-12">
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -303,7 +303,7 @@
         </div>
       </div>
 
-      <h5 class="display-4 mt-2 mb-2">Skills</h5>
+      <h2 class="mt-2 mb-2"><strong>Skills</strong></h2>
       <div class="row">
         <div class="col-12">
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -316,6 +316,8 @@
               <h5 class="mb-2">Git, GitHub, and JIRA</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-b">Languages</strong>
               <h5 class="mb-2">C, Java, Python, PHP, and JavaScript</h5>
+              <strong class="d-inline-block mt-2 mb-2 fs-b">Others</strong>
+              <h5 class="mb-2">Google Analytics(certified), Google Ads(Certified), and SEO</h5>
             </div>
           </div>
         </div>
