disabled links on learnings

--- a/learnings.html
+++ b/learnings.html
@@ -42,8 +42,8 @@
             </a>
             <a href="#" class="list-group-item list-group-item-action">Data Structure</a>
             <a href="#" class="list-group-item list-group-item-action">Coding</a>
-            <a href="learning_web/frontend.html" class="list-group-item list-group-item-action">Web - Frontend</a>
-            <a href="learning_web/backend.html" class="list-group-item list-group-item-action">Web - Backend</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Frontend</a>
+            <a href="#" class="list-group-item list-group-item-action">Web - Backend</a>
           </div>
         </div>
         <div class="col-9">
