--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@
                   Apps
                   <ul>
                     <li>
-                      Zion Market Application Coupon & Royalty | <a href="https://apps.apple.com/us/app/zion-market-rewards/id1454715176">iOS</a>,<a href="https://play.google.com/store/apps/details?id=com.ionicframework.zionmarketv01&hl=en_US">Android</a>
+                      Zion Market Application Coupon & Loyalty | <a href="https://apps.apple.com/us/app/zion-market-rewards/id1454715176">iOS</a>,<a href="https://play.google.com/store/apps/details?id=com.ionicframework.zionmarketv01&hl=en_US">Android</a>
                     </li>
                     <li>
                       Radio Seoul Application Realtime Radio | <a href="https://apps.apple.com/us/app/%EB%9D%BC%EB%94%94%EC%98%A4%EC%84%9C%EC%9A%B8/id1281859389">iOS</a>,<a href="https://play.google.com/store/apps/details?id=com.radioseoul&hl=en_US">Android</a>
@@ -293,11 +293,11 @@
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 fs-15 fs-b">University of Southern California</strong>
-              <h5 class="mb-2">M.S. Computer Science, Jan 2015 Dec 2016</h5>
+              <h5 class="mb-2">M.S. Computer Science, Jan 2015 - Dec 2016</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-15 fs-b">Handong University</strong>
-              <h5 class="mb-2">B.S. Computer Science and Engineering, Mar 2007 Jun 2013</h5>
+              <h5 class="mb-2">B.S. Computer Science and Engineering, Mar 2007 - Jun 2013</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-15 fs-b">Texas A&M University</strong>
-              <h5 class="mb-2">Computer Science, Exchange Student, Jan 2011 Jun 2011</h5>
+              <h5 class="mb-2">Computer Science, Exchange Student, Jan 2011 - Jun 2011</h5>
             </div>
           </div>
         </div>
