forgot to add laravel on skill section

--- a/resume.html
+++ b/resume.html
@@ -311,7 +311,7 @@
               <strong class="d-inline-block mb-2 fs-b">Frontend</strong>
               <h5 class="mb-2">HTML, CSS, SCSS, JavaScript, jQuery, React, React Native and Gulp</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-b">Backend</strong>
-              <h5 class="mb-2">PHP, MySQL, Node.js, MongoDB, and Firebase</h5>
+              <h5 class="mb-2">PHP, Laravel, MySQL, Node.js, MongoDB, and Firebase</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-b">Tools</strong>
               <h5 class="mb-2">Git, GitHub, and JIRA</h5>
               <strong class="d-inline-block mt-2 mb-2 fs-b">Languages</strong>
