Added digital marketing & seo section on learning

--- a/learnings.html
+++ b/learnings.html
@@ -44,6 +44,8 @@
             <a href="#" class="list-group-item list-group-item-action">Coding</a>
             <a href="#" class="list-group-item list-group-item-action">Web - Frontend</a>
             <a href="#" class="list-group-item list-group-item-action">Web - Backend</a>
+            <a href="#" class="list-group-item list-group-item-action">SEO</a>
+            <a href="#" class="list-group-item list-group-item-action">Digital Marketing</a>
           </div>
         </div>
         <div class="col-9">
