Temporarily closed blogs

--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="blogs.html">Blogs</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="learnings.html">Learnings</a>
               </li>
@@ -76,7 +76,7 @@
                 </li>
               </ul>
               <hr />
-              <h4 class="fs-b mb-2">Works</h4>
+              <h4 class="fs-b mb-2">Lead & Fully Developed</h4>
               <ul class="">
                 <li>
                   <a href="https://ajasianfoods.com">Ajinomoto</a> Foods
