--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="blogs.html">Blogs</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="learnings.html">Learnings</a>
               </li>
